k8s/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-jmeter
spec:
  selector:
    matchLabels:
      app: devops-jmeter
  replicas: 1
  template:
    metadata:
      labels:
        app: devops-jmeter
        org: tz
        team: devops
        project: jmeter
        environment: jmeter
    spec:
      imagePullSecrets:
        - name: tz-registrykey
      containers:
      - name: devops-jmeter
        image: ${REPOSITORY_TAG}
        imagePullPolicy: Always
        resources:
          requests:
            memory: '2Gi'
            cpu: '2000m'
          limits:
            memory: '3Gi'
            cpu: '2000m'
      nodeSelector:
        team: devops
        environment: jmeter

---
apiVersion: v1
kind: Service
metadata:
  name: devops-jmeter
spec:
  type: NodePort
  selector:
    app: devops-jmeter
  ports:
    - port: 80
      name: api-80
      targetPort: 8000
#    - port: 443
#      name: api-443
#      targetPort: 443

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-jmeter
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
#    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:${AWS_REGION}:${ACCOUNT_ID}:certificate/${CERTIFICATE}
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
          { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=3600
spec:
  rules:
  - host: jmeter.devops.${CLUSTER_NAME}.${DOMAIN_NAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-jmeter
            port:
              number: 80
  - host: jmeter.devops.${DOMAIN_NAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-jmeter
            port:
              number: 80
